# DeepEngine

./: .gitignore  .gitmodules  CMakeLists.txt  DeepEngine.sln  README.md
CMake/: AttachGLFW.cmake  AttachImGui.cmake  AttachVulkan.cmake  CollectSourceFiles.cmake
DeepDoc/: Architecture.md  Code Hierarchy.canvas  Graf.canvas  Scene.md  _Nomenclature.md
DeepDoc/.obsidian/: app.json  bookmarks.json  graph.json  workspace.json
DeepDoc/.obsidian/.obsidian/: workspace.json
DeepDoc/Architecture/Bus/: Bus Overview Example.canvas  Bus Overview.md
DeepDoc/Architecture/Bus/Event Bus/: Event Bus Overview.md  Event Bus.canvas
DeepDoc/Architecture/Serializer/: SerializersContainer.md
DeepDoc/Debug (Core)/: Debug Graph.canvas  Initialization Tracker.md  Logger.md
DeepDoc/Renderer/VULKAN/: Vulkan Feature Wrapper.md
DeepEngine/: DE_Window.cpp  DE_Window.hpp  DeepEngine.cpp  DeepEngine.vcxproj  DeepEngine.vcxproj.filters
DeepEngine/Architecture/: EngineEvents.h  EngineSystem.cpp  EngineSystem.h  EventListener.cpp  Events.h  Events.tpp
DeepEngine/Architecture/EventBus/: BaseEvent.h  EventBus.cpp  EventBus.h  EventListener.h
DeepEngine/Architecture/Internal/: Bus.cpp  Bus.h  BusListener.h  BusObject.h
DeepEngine/Architecture/Scene/: Scene.cpp  Scene.h  Scene.tpp  SceneElement.cpp  SceneElement.h
DeepEngine/Architecture/Serialize/: InternalSerializers.h  SerializersContainer.h
DeepEngine/Architecture/Serialize/DefaultImplementations/: GlmSerializers.h
DeepEngine/Core/: EngineSystem.cpp  EngineSystem.h
DeepEngine/Core/Bus/: Bus.h  BusListener.h  BusObject.h
DeepEngine/Core/Events/: BaseEvent.h  EventBus.cpp  EventBus.h  EventListener.h
DeepEngine/Core/Scene/: Scene.h  Scene.tpp  SceneElement.cpp  SceneElement.h
DeepEngine/Core/Serialize/: SerializersContainer.h
DeepEngine/Core/Serialize/DefaultImplementations/: GlmSerializers.h
DeepEngine/Debug/: Debug.h  Logger.h  Timer.cpp
DeepEngine/Debugs/: InitializationMilestone.h  InitializationTracker.cpp  InitializationTracker.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h  Timing.h
DeepEngine/Engine/: EngineEvents.h
DeepEngine/Engine/Renderer/: Events.h  MainRenderPass.h  RendererCommandRecorder.cpp  RendererCommandRecorder.h  RendererSubsystem.cpp  RendererSubsystem.h  TriangleRenderer.h
DeepEngine/Engine/Renderer/ImGui/: ImGuiController.cpp  ImGuiController.h  ImGuiRenderPass.cpp  ImGuiRenderPass.h
DeepEngine/Engine/Renderer/Shader/: compile.bat  dxCompile.bat  frag.spv
DeepEngine/Engine/Renderer/Vulkan/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Factory.cpp  Factory.h  Fence.cpp  Fence.h  GraphicsPipeline.cpp  GraphicsPipeline.h  PipelineLayout.cpp  PipelineLayout.h  RenderPass.cpp  RenderPass.h  Semaphore.cpp  Semaphore.h  ShaderModule.cpp  ShaderModule.h  VulkanFactory.cpp  VulkanFactory.h  VulkanObject.h  VulkanPCH.h
DeepEngine/Engine/Renderer/Vulkan/Controller/: BaseVulkanController.cpp  BaseVulkanController.h
DeepEngine/Engine/Renderer/Vulkan/Debug/: VulkanDebug.cpp  VulkanDebug.h
DeepEngine/Engine/Renderer/Vulkan/Events/: VulkanEvents.h
DeepEngine/Engine/Renderer/Vulkan/Instance/: VulkanInstance.cpp  VulkanInstance.h  (+5 more)
DeepEngine/Engine/Window/: WindowSubsystem.cpp  WindowSubsystem.hpp
DeepEngine/Renderer/: Events.h  ImGuiRenderPass.h  MainRenderPass.h  RendererCommandRecorder.h  RendererSubsystem.cpp  RendererSubsystem.h  TriangleRenderer.cpp  TriangleRenderer.h
DeepEngine/Renderer/ImGui/: ImGuiController.cpp  ImGuiController.h  ImGuiRenderPass.cpp  ImGuiRenderPass.h
DeepEngine/Renderer/Shader/: Fragment.hlsl  Vertex.hlsl  dxCompile.bat  frag1.spv  vert.spv  vert1.spv
DeepEngine/Renderer/Vulkan/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Fence.h  GraphicsPipeline.cpp  GraphicsPipeline.h  PipelineLayout.cpp  PipelineLayout.h  RenderPass.cpp  RenderPass.h  Semaphore.h  ShaderModule.cpp  ShaderModule.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanFence.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanShaderModule.cpp  VulkanShaderModule.h
DeepEngine/Renderer/Vulkan/Controller/: BaseVulkanController.cpp  BaseVulkanController.h
DeepEngine/Renderer/Vulkan/Debug/: VulkanDebug.h
DeepEngine/Renderer/Vulkan/Events/: VulkanEvents.h
DeepEngine/Renderer/Vulkan/Instance/: VulkanInstance.cpp  VulkanInstance.h  VulkanInstance_Instance.cpp  VulkanInstance_LogicalDevice.cpp  VulkanInstance_PhysicalDevice.cpp  VulkanInstance_Surface.cpp  VulkanInstance_SwapChain.cpp
DeepEngine/Renderer/Vulkan_Debug/: VulkanDebug.cpp  VulkanDebug.h
DeepEngine/Renderer/Vulkan_Instance/: VulkanDebug.cpp  VulkanDebug.h  VulkanInstance.h  VulkanInstance_Instance.cpp  VulkanInstance_PhysicalDevice.cpp
DeepEngine/Vulkan/: Device.cpp  Device.hpp  Renderer.cpp  Renderer.hpp
DeepEngine/VulkanPrototype/: VulkanPrototype.cpp  VulkanPrototype.h  compile.bat  simple_shader.vert
DeepEngine/VulkanPrototype/Instance/: VertexBuffer.h  VulkanCommandPool.h  VulkanDebug.cpp  VulkanDebug.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLogicalLayer.cpp  VulkanLogicalLayer.h  VulkanPhysicalLayer.cpp  VulkanPhysicalLayer.h  VulkanPipeline.h  VulkanPipelineLayout.h  VulkanRenderPass.h  VulkanSwapChain.h
DeepEngine/VulkanPrototype/Instance/Shader/: compile.bat  shader.frag  shader.vert
DeepEngine/Window/: Window.cpp  Window.hpp  WindowSubsystem.cpp  WindowSubsystem.hpp
